--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <br>
                 Identification Number: 306444808
                 <br>
-                Georgia, Tbilisi, Samgori District, Police I Lane N5
+                Georgia, Tbilisi, Police I Lane N5, P.O. Box 0100
                 <br>
                 hi@brainworks.engineering
                 <br>
