brainworks change name to match license

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 <body>
     <main>
         <section class="splash">
-            <h1>IE BrainWorks</h1>
+            <h1>BrainWorks</h1>
             <h2>Well-crafted software and training for your teams.</h2>
-            <p> IE BrainWorks
+            <p> Individual Entrepreneur Brainworks
                 <br>
                 Identification Number: 306444808
                 <br>
